--- a/package.json
+++ b/package.json
@@ -19,12 +19,19 @@
     "@angular/platform-browser": "~10.2.5",
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "~10.2.5",
-    "primeicons": "^7.0.0",
-    "primeng-lts": "^12.2.5",
+    "primeicons": "^4.1.0",
+    "primeng": "^8.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
+"styles": [
+  "node_modules/primeng/resources/themes/saga-blue/theme.css",
+  "node_modules/primeng/resources/primeng.min.css",
+  "node_modules/primeicons/primeicons.css",
+  "src/styles.css"
+],
+
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.4",
     "@angular/cli": "~10.2.4",
